--- a/springDemo_web/pom.xml
+++ b/springDemo_web/pom.xml
@@ -9,8 +9,8 @@
   </parent>
   
   <properties>
-  <maven.compiler.source>13</maven.compiler.source>
-  <maven.compiler.targer>13</maven.compiler.targer>
+  <maven.compiler.source>12</maven.compiler.source>
+  <maven.compiler.target>12</maven.compiler.target>
   </properties>
   
   
@@ -28,6 +28,12 @@
     <artifactId>springDemo_service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </dependency>  	
+  <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+ <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.10.1</version>
+ </dependency>
   
   
   <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
@@ -42,6 +48,13 @@
     <groupId>javax.servlet</groupId>
     <artifactId>jstl</artifactId>
     <version>1.2</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>4.0.1</version>
+    <scope>provided</scope>
 </dependency>
 
 
